Dev: All pages translate feature & charts downloadable png and csv

--- a/client/public/locales/th/translation.json
+++ b/client/public/locales/th/translation.json
@@ -56,5 +56,225 @@
       "facility_desc": "ปริมาตรรวมที่แปรรูปในแต่ละโรงงาน (กก.)",
       "facility_legend": "น้ำหนัก (กก.)"
     }
+  },
+  "clients": {
+    "title": "ลูกค้า",
+    "description": "จัดการโปรไฟล์ลูกค้าและข้อมูลขยะของพวกเขา",
+    "error_fetch": "ไม่สามารถดึงข้อมูลลูกค้าได้ โปรดลองอีกครั้ง",
+    "toast_delete_success": "ลบไคลเอนต์ \"{{name}}\" สำเร็จแล้ว",
+    "toast_delete_error": "ไม่สามารถลบไคลเอนต์ได้",
+    "table_col_company": "ชื่อบริษัท",
+    "table_col_contact": "ผู้ติดต่อ",
+    "table_col_email": "อีเมล",
+    "table_col_phone": "โทรศัพท์",
+    "table_col_actions": "การกระทำ",
+    "dropdown_actions": "การกระทำ",
+    "dropdown_waste": "ข้อมูลขยะ",
+    "dropdown_edit": "แก้ไขลูกค้า",
+    "dropdown_delete": "ลบลูกค้า",
+    "table_no_clients": "ไม่พบลูกค้า คลิก \"เพิ่มลูกค้าใหม่\" เพื่อเริ่มต้น",
+    "confirm_delete_title": "คุณแน่ใจว่าต้องการลบไคลเอนต์นี้หรือไม่?",
+    "confirm_delete_desc": "การดำเนินการนี้ไม่สามารถย้อนกลับได้ ข้อมูลและรายงานขยะทั้งหมดสำหรับไคลเอนต์นี้จะถูกลบอย่างถาวรด้วย"
+  },
+  "reports": {
+    "title": "รายงาน",
+    "description": "ดูและจัดการรายงานความยั่งยืนที่คุณสร้างขึ้นทั้งหมด",
+    "error_fetch": "ไม่สามารถดึงรายงานได้ โปรดลองอีกครั้ง",
+    "toast_pdf_error": "ไม่สามารถสร้าง PDF ได้",
+    "toast_fetch_error": "ไม่สามารถดึงข้อมูลรายงานเพื่อดาวน์โหลด",
+    "button_generate": "สร้างรายงานใหม่",
+    "table_col_title": "หัวข้อรายงาน",
+    "table_col_client": "ลูกค้า",
+    "table_col_period": "ระยะเวลา",
+    "table_col_generated": "สร้างขึ้นเมื่อ",
+    "table_col_actions": "การกระทำ",
+    "button_preview": "ตัวอย่าง",
+    "button_download": "ดาวน์โหลด",
+    "table_no_reports": "ยังไม่มีการสร้างรายงานใดๆ",
+    "charts": {
+      "emissions_label": "ปริมาณการปล่อยมลพิษ (กก. CO2e)",
+      "emissions_avoided": "หลีกเลี่ยง",
+      "emissions_logistics": "โลจิสติกส์",
+      "emissions_recycling": "การรีไซเคิล",
+      "logistics_emissions": "การปล่อยมลพิษจากการขนส่ง",
+      "recycling_emissions": "การปล่อยมลพิษจากการรีไซเคิล",
+      "quantity_kg": "ปริมาณ (กก.)",
+      "collected_kg": "เก็บรวบรวม (กก.)",
+      "weight_kg": "น้ำหนัก (กก.)"
+    }
+  },
+  "users": {
+    "title": "การจัดการผู้ใช้",
+    "description": "เพิ่ม แก้ไข หรือลบผู้ใช้สำหรับผู้เช่าของคุณ",
+    "error_fetch": "ไม่สามารถดึงผู้ใช้ได้",
+    "toast_delete_success": "ลบผู้ใช้สำเร็จแล้ว",
+    "toast_delete_error": "ไม่สามารถลบผู้ใช้ได้",
+    "table_col_name": "ชื่อ",
+    "table_col_email": "อีเมล",
+    "table_col_role": "บทบาท",
+    "table_col_joined": "เข้าร่วมแล้ว",
+    "table_col_actions": "การกระทำ",
+    "dropdown_edit": "แก้ไขผู้ใช้",
+    "dropdown_delete": "ลบผู้ใช้",
+    "table_no_users": "ไม่พบผู้ใช้ คลิก \"เพิ่มผู้ใช้ใหม่\" เพื่อเริ่มต้น",
+    "confirm_delete_title": "คุณแน่ใจว่าต้องการลบผู้ใช้รายนี้หรือไม่?",
+    "confirm_delete_desc": "การดำเนินการนี้ไม่สามารถย้อนกลับได้ การดำเนินการนี้จะถูกลบบัญชีผู้ใช้อย่างถาวร"
+  },
+  "settings": {
+    "tabs": {
+      "profile": "ประวัติโดยย่อ",
+      "locations": "สถานที่ต่างๆ",
+      "vehicles": "ยานพาหนะ"
+    },
+    "profile": {
+      "title": "ข้อมูลส่วนบุคคล",
+      "description": "อัปเดตชื่อและที่อยู่อีเมลของคุณ",
+      "email": "ที่อยู่อีเมล",
+      "save": "บันทึกการเปลี่ยนแปลง",
+      "toast_success": "อัปเดตโปรไฟล์สำเร็จแล้ว!",
+      "toast_error": "ไม่สามารถอัพเดตโปรไฟล์ได้"
+    },
+    "security": {
+      "title": "ความปลอดภัย",
+      "description": "อัพเดตรหัสผ่านบัญชีของคุณ",
+      "current": "รหัสผ่านปัจจุบัน",
+      "new": "รหัสผ่านใหม่",
+      "confirm": "ยืนยันรหัสผ่านใหม่",
+      "update": "อัปเดตรหัสผ่าน",
+      "toast_success": "เปลี่ยนรหัสผ่านสำเร็จแล้ว!",
+      "toast_error": "ไม่สามารถเปลี่ยนรหัสผ่านได้"
+    },
+    "locations": {
+      "facilities": "สิ่งอำนวยความสะดวก",
+      "pickup": "สถานที่รับสินค้า",
+      "facility_name": "ชื่อสถานที่",
+      "facility_placeholder": "เช่น โรงงานรีไซเคิลหลัก",
+      "pickup_name": "ชื่อสถานที่",
+      "pickup_placeholder": "เช่น โกดังสำนักงานใจกลางเมือง",
+      "address_label": "ที่อยู่เต็ม",
+      "address_placeholder": "เช่น 123 ถนนอุตสาหกรรม เมือง"
+    },
+    "vehicles": {
+      "types": "ประเภทยานพาหนะ",
+      "name_label": "ชื่อรถ / รุ่น",
+      "name_placeholder": "เช่น รถบรรทุก Scania ขนาด 10 ตัน"
+    },
+    "crud": {
+      "error_load": "ไม่สามารถโหลด {{title}} ได้",
+      "delete_success": "ลบ {{title}} แล้ว",
+      "delete_error": "ไม่สามารถลบรายการได้",
+      "description": "เพิ่ม แก้ไข หรือลบ {{title}}",
+      "col_name": "ชื่อ",
+      "col_address": "ที่อยู่",
+      "col_actions": "การกระทำ",
+      "no_items": "ยังไม่มีการเพิ่มรายการ",
+      "confirm_delete_title": "ลบ {{title}}?",
+      "confirm_delete_desc": "การดำเนินการนี้ไม่สามารถย้อนกลับได้ คุณแน่ใจหรือไม่ว่าต้องการลบรายการนี้อย่างถาวร",
+      "add_new": "เพิ่มใหม่",
+      "add_title": "เพิ่ม {{title}} ใหม่",
+      "cancel": "ยกเลิก",
+      "save": "บันทึก",
+      "add_success": "เพิ่ม {{title}} แล้ว!",
+      "add_error": "ไม่สามารถเพิ่มรายการได้",
+      "edit_title": "แก้ไข {{title}}",
+      "save_changes": "บันทึกการเปลี่ยนแปลง",
+      "update_success": "อัปเดต {{title}} แล้ว",
+      "update_error": "ไม่สามารถอัปเดตรายการได้"
+    }
+  },
+  "client_detail": {
+    "back_link": "กลับไปที่ลูกค้าทั้งหมด",
+    "profile_desc": "ประวัติลูกค้าและการจัดการขยะ",
+    "contact": "ผู้ติดต่อ:",
+    "email": "อีเมล:",
+    "phone": "โทรศัพท์:",
+    "address": "ที่อยู่:",
+    "not_available": "ไม่มีข้อมูล",
+    "entries_title": "รายการขยะ",
+    "entries_desc": "บันทึกและติดตามขยะที่เก็บรวบรวมสำหรับลูกค้ารายนี้ คลิกแถวเพื่อดูรายละเอียด",
+    "col_pickup": "วันที่รับสินค้า",
+    "col_type": "ประเภทของขยะ",
+    "col_quantity": "ปริมาณรวม",
+    "col_progress": "ความก้าวหน้าในการรีไซเคิล",
+    "col_actions": "การกระทำ",
+    "progress_text": "{{รีไซเคิล}} จาก {{รวม}} {{หน่วย}}",
+    "status_full": "รีไซเคิลได้เต็มที่",
+    "status_partial": "รีไซเคิลบางส่วน",
+    "status_pending": "รอดำเนินการ",
+    "btn_recycled": "รีไซเคิล",
+    "btn_process": "กระบวนการ",
+    "dropdown_details": "ดูรายละเอียด",
+    "dropdown_delete": "ลบ",
+    "no_entries": "ไม่พบรายการขยะ คลิก \"เพิ่มรายการขยะ\" เพื่อบันทึกการรวบรวม",
+    "confirm_title": "คุณแน่ใจมั้ย?",
+    "confirm_desc": "การดำเนินการนี้ไม่สามารถย้อนกลับได้ การดำเนินการนี้จะเป็นการลบรายการขยะนี้และประวัติการรีไซเคิลทั้งหมดอย่างถาวร",
+    "error_fetch": "ไม่สามารถดึงข้อมูลไคลเอนต์ได้",
+    "toast_delete_success": "ลบรายการขยะสำเร็จแล้ว",
+    "toast_delete_error": "การลบรายการขยะล้มเหลว"
+  },
+  "report_generator": {
+    "steps": {
+      "config": "การกำหนดค่า",
+      "data": "การเลือกข้อมูล",
+      "insights": "ข้อมูลเชิงลึก",
+      "generate": "สร้าง"
+    },
+    "img_upload": "คลิกเพื่ออัพโหลด",
+    "step1": {
+      "title": "หัวข้อรายงาน",
+      "title_placeholder": "เช่น รายงานความยั่งยืนไตรมาส 3",
+      "cover": "รูปภาพหน้าปก (ไม่บังคับ)",
+      "logo": "โลโก้บริษัท (ไม่บังคับ)"
+    },
+    "step2": {
+      "client": "ลูกค้า",
+      "client_placeholder": "เลือกลูกค้า",
+      "period": "ระยะเวลาการรายงาน",
+      "period_placeholder": "เลือกช่วงวันที่",
+      "waste_types": "ประเภทขยะที่รวมอยู่",
+      "waste_types_desc": "เลือกประเภทขยะที่จะรวมไว้ในรายงาน",
+      "waste_types_empty": "เลือกไคลเอนต์และช่วงวันที่เพื่อดูประเภทขยะที่มีให้เลือก"
+    },
+    "step2_5": {
+      "title": "รวมส่วนการเขียนด้วยไหม?",
+      "desc": "การเพิ่มส่วนการเขียนช่วยให้คุณสามารถแสดงข้อมูลเชิงลึกที่กำหนดเองในรายงานของคุณได้ นี่คือตัวอย่างคำถามที่คุณอาจตอบได้:",
+      "ai_prompt": "ความช่วยเหลือ AI ของเราพร้อมที่จะช่วยคุณตอบคำถามเหล่านี้อย่างมีประสิทธิภาพ",
+      "q1": "ประเด็นสำคัญของรายงานฉบับนี้มีอะไรบ้าง?",
+      "q2": "มีคำแนะนำใด ๆ สำหรับการปรับปรุงหรือไม่?",
+      "q3": "ความคิดเห็นหรือหมายเหตุเพิ่มเติม?",
+      "yes": "ใช่ รวม",
+      "no": "ไม่ข้าม"
+    },
+    "step3": {
+      "toast_generating": "กำลังสร้างข้อมูลเชิงลึกเกี่ยวกับ AI อาจใช้เวลาสักครู่...",
+      "toast_success": "สร้างข้อมูลเชิงลึกของ AI สำเร็จแล้ว!",
+      "toast_error": "ไม่สามารถสร้างข้อมูลเชิงลึกของ AI ได้",
+      "ai_title": "ความช่วยเหลือด้าน AI พร้อมให้บริการ",
+      "ai_desc1": "กรอกคำตอบของคุณด้วยตนเองหรือให้เรา",
+      "ai_desc2": "AI สร้างข้อมูลเชิงลึก",
+      "ai_desc3": "สำหรับคุณ.",
+      "ai_btn": "สร้างสรรค์ด้วย AI",
+      "question_label": "คำถาม {{index}}: {{text}}",
+      "question_placeholder": "ให้คำตอบโดยละเอียด..."
+    },
+    "step4": {
+      "title": "พร้อมสร้าง",
+      "desc": "ทุกส่วนได้รับการตั้งค่าแล้ว คลิกปุ่มด้านล่างเพื่อสร้างรายงานของคุณ",
+      "check1": "ตรวจสอบให้แน่ใจว่าส่วนต่างๆ ของรายงานเสร็จสมบูรณ์",
+      "check2": "ตรวจสอบไฮไลท์สำคัญก่อนที่จะสร้าง",
+      "check3": "ให้แน่ใจว่ามีการรวมข้อมูลเชิงลึกของ AI ตามความจำเป็น"
+    },
+    "default_title": "รายงานการจัดการขยะและความยั่งยืน",
+    "toast_load_error": "ไม่สามารถโหลดการกำหนดค่าหน้าได้",
+    "toast_generate_success": "สร้างรายงานสำเร็จแล้ว!",
+    "toast_generate_error": "ไม่สามารถสร้างรายงานได้",
+    "back_link": "กลับไปที่รายงาน",
+    "title": "สร้างรายงานใหม่",
+    "desc": "ปฏิบัติตามขั้นตอนเพื่อสร้างรายงานที่ครอบคลุม",
+    "btn_cancel": "ยกเลิกการสร้างรายงาน",
+    "btn_back": "กลับ",
+    "btn_next_questions": "คำถามต่อไป",
+    "btn_next": "ต่อไป",
+    "btn_generate": "สร้างรายงาน"
   }
 }
