--- a/client/public/locales/zh/translation.json
+++ b/client/public/locales/zh/translation.json
@@ -56,5 +56,225 @@
       "facility_desc": "每个设施处理的总体积（公斤）。",
       "facility_legend": "重量（公斤）"
     }
+  },
+  "clients": {
+    "title": "客户",
+    "description": "管理您的客户资料及其废物数据。",
+    "error_fetch": "无法获取客户端。请重试。",
+    "toast_delete_success": "客户端“{{name}}”删除成功。",
+    "toast_delete_error": "删除客户端失败。",
+    "table_col_company": "公司名称",
+    "table_col_contact": "联络人",
+    "table_col_email": "电子邮件",
+    "table_col_phone": "电话",
+    "table_col_actions": "行动",
+    "dropdown_actions": "行动",
+    "dropdown_waste": "废弃数据",
+    "dropdown_edit": "编辑客户端",
+    "dropdown_delete": "删除客户端",
+    "table_no_clients": "未找到客户。点击“添加新客户”即可开始。",
+    "confirm_delete_title": "您确定要删除该客户端吗？",
+    "confirm_delete_desc": "此操作无法撤消。此客户的所有废弃物数据和报告也将被永久删除。"
+  },
+  "reports": {
+    "title": "报告",
+    "description": "查看和管理所有生成的可持续发展报告。",
+    "error_fetch": "无法获取报告。请重试。",
+    "toast_pdf_error": "无法生成 PDF。",
+    "toast_fetch_error": "无法获取要下载的报告数据。",
+    "button_generate": "生成新报告",
+    "table_col_title": "报告标题",
+    "table_col_client": "客户",
+    "table_col_period": "时期",
+    "table_col_generated": "生成日期",
+    "table_col_actions": "行动",
+    "button_preview": "预览",
+    "button_download": "下载",
+    "table_no_reports": "尚未生成任何报告。",
+    "charts": {
+      "emissions_label": "排放量（千克二氧化碳当量）",
+      "emissions_avoided": "避免",
+      "emissions_logistics": "后勤",
+      "emissions_recycling": "回收利用",
+      "logistics_emissions": "物流排放",
+      "recycling_emissions": "回收排放",
+      "quantity_kg": "数量（公斤）",
+      "collected_kg": "收集量（公斤）",
+      "weight_kg": "重量（公斤）"
+    }
+  },
+  "users": {
+    "title": "用户管理",
+    "description": "为您的租户添加、编辑或删除用户。",
+    "error_fetch": "无法获取用户。",
+    "toast_delete_success": "用户删除成功。",
+    "toast_delete_error": "删除用户失败。",
+    "table_col_name": "姓名",
+    "table_col_email": "电子邮件",
+    "table_col_role": "角色",
+    "table_col_joined": "已加入",
+    "table_col_actions": "行动",
+    "dropdown_edit": "编辑用户",
+    "dropdown_delete": "删除用户",
+    "table_no_users": "未找到用户。点击“添加新用户”即可开始。",
+    "confirm_delete_title": "您确定要删除该用户吗？",
+    "confirm_delete_desc": "此操作无法撤消。这将永久删除该用户的帐户。"
+  },
+  "settings": {
+    "tabs": {
+      "profile": "轮廓",
+      "locations": "位置",
+      "vehicles": "车辆"
+    },
+    "profile": {
+      "title": "个人信息",
+      "description": "更新您的姓名和电子邮件地址。",
+      "email": "电子邮件",
+      "save": "保存更改",
+      "toast_success": "个人资料更新成功！",
+      "toast_error": "更新个人资料失败。"
+    },
+    "security": {
+      "title": "安全",
+      "description": "更新您的帐户密码。",
+      "current": "当前密码",
+      "new": "新密码",
+      "confirm": "确认新密码",
+      "update": "更新密码",
+      "toast_success": "密码修改成功！",
+      "toast_error": "更改密码失败。"
+    },
+    "locations": {
+      "facilities": "设施",
+      "pickup": "取货地点",
+      "facility_name": "设施名称",
+      "facility_placeholder": "例如，主回收厂",
+      "pickup_name": "地点名称",
+      "pickup_placeholder": "例如，市中心办公仓库",
+      "address_label": "完整地址",
+      "address_placeholder": "例如，123 Industrial Way，城市"
+    },
+    "vehicles": {
+      "types": "车辆类型",
+      "name_label": "车辆名称/型号",
+      "name_placeholder": "例如，10吨斯堪尼亚卡车"
+    },
+    "crud": {
+      "error_load": "无法加载 {{title}}。",
+      "delete_success": "{{title}} 已删除。",
+      "delete_error": "无法删除项目。",
+      "description": "添加、编辑或删除 {{title}}。",
+      "col_name": "姓名",
+      "col_address": "地址",
+      "col_actions": "行动",
+      "no_items": "尚未添加任何商品。",
+      "confirm_delete_title": "删除 {{title}}？",
+      "confirm_delete_desc": "此操作无法撤消。您确定要永久删除此项目吗？",
+      "add_new": "添加新",
+      "add_title": "添加新的 {{title}}",
+      "cancel": "取消",
+      "save": "节省",
+      "add_success": "{{title}} 已添加！",
+      "add_error": "添加项目失败。",
+      "edit_title": "编辑 {{title}}",
+      "save_changes": "保存更改",
+      "update_success": "{{title}} 已更新。",
+      "update_error": "更新项目失败。"
+    }
+  },
+  "client_detail": {
+    "back_link": "返回所有客户",
+    "profile_desc": "客户资料和废物管理历史。",
+    "contact": "联络人：",
+    "email": "电子邮件：",
+    "phone": "电话：",
+    "address": "地址：",
+    "not_available": "不适用",
+    "entries_title": "废物条目",
+    "entries_desc": "记录并跟踪此客户收集的废弃物。点击一行即可查看详情。",
+    "col_pickup": "取货日期",
+    "col_type": "废物类型",
+    "col_quantity": "总数量",
+    "col_progress": "回收进展",
+    "col_actions": "行动",
+    "progress_text": "{{recycled}} 共 {{total}} {{unit}}",
+    "status_full": "完全回收",
+    "status_partial": "部分回收",
+    "status_pending": "待办的",
+    "btn_recycled": "回收利用",
+    "btn_process": "过程",
+    "dropdown_details": "查看详情",
+    "dropdown_delete": "删除",
+    "no_entries": "未找到废物条目。点击“添加废物条目”即可记录收集情况。",
+    "confirm_title": "你确定吗？",
+    "confirm_desc": "此操作无法撤消。这将永久删除此废品条目及其所有回收历史记录。",
+    "error_fetch": "无法获取客户端数据。",
+    "toast_delete_success": "废物条目删除成功。",
+    "toast_delete_error": "删除废弃条目失败。"
+  },
+  "report_generator": {
+    "steps": {
+      "config": "配置",
+      "data": "数据选择",
+      "insights": "洞察",
+      "generate": "产生"
+    },
+    "img_upload": "点击上传",
+    "step1": {
+      "title": "报告标题",
+      "title_placeholder": "例如，第三季度可持续发展报告",
+      "cover": "封面图片（可选）",
+      "logo": "公司徽标（可选）"
+    },
+    "step2": {
+      "client": "客户",
+      "client_placeholder": "选择客户",
+      "period": "报告期",
+      "period_placeholder": "选择日期范围",
+      "waste_types": "包含的废物类型",
+      "waste_types_desc": "选择要包含在报告中的废物类型。",
+      "waste_types_empty": "选择客户和日期范围以查看可用的废物类型。"
+    },
+    "step2_5": {
+      "title": "包括写作部分吗？",
+      "desc": "添加写作部分可让您在报告中提供自定义见解。以下是您可以回答的示例问题：",
+      "ai_prompt": "我们的人工智能助手随时准备帮助您有效地回答这些问题。",
+      "q1": "这份报告的主要亮点是什么？",
+      "q2": "有什么改进建议吗？",
+      "q3": "还有其他评论或说明吗？",
+      "yes": "是的，包括",
+      "no": "不，跳过"
+    },
+    "step3": {
+      "toast_generating": "生成 AI 洞察，这可能需要一点时间......",
+      "toast_success": "AI洞察生成成功！",
+      "toast_error": "无法生成 AI 洞察。",
+      "ai_title": "提供人工智能协助",
+      "ai_desc1": "手动填写您的答案，或者让我们的",
+      "ai_desc2": "人工智能产生洞察",
+      "ai_desc3": "为你。",
+      "ai_btn": "利用人工智能生成",
+      "question_label": "问题 {{index}}: {{text}}",
+      "question_placeholder": "提供详细答案..."
+    },
+    "step4": {
+      "title": "准备生成",
+      "desc": "所有部分均已设置完毕。点击下方按钮即可生成报告。",
+      "check1": "确保所有报告部分都已完成。",
+      "check2": "生成之前检查关键亮点。",
+      "check3": "确保根据需要包含 AI 洞察。"
+    },
+    "default_title": "废物管理与可持续发展报告",
+    "toast_load_error": "无法加载页面配置。",
+    "toast_generate_success": "报告生成成功！",
+    "toast_generate_error": "无法生成报告。",
+    "back_link": "返回报告",
+    "title": "生成新报告",
+    "desc": "按照步骤创建综合报告。",
+    "btn_cancel": "取消生成报告",
+    "btn_back": "后退",
+    "btn_next_questions": "下一个问题",
+    "btn_next": "下一个",
+    "btn_generate": "生成报告"
   }
 }
