--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -102,6 +102,180 @@
       "collected_kg": "Collected (kg)",
       "weight_kg": "Weight (kg)"
     }
+  },
+  "users": {
+    "title": "User Management",
+    "description": "Add, edit, or remove users for your tenant.",
+    "error_fetch": "Failed to fetch users.",
+    "toast_delete_success": "User deleted successfully.",
+    "toast_delete_error": "Failed to delete user.",
+    "table_col_name": "Name",
+    "table_col_email": "Email",
+    "table_col_role": "Role",
+    "table_col_joined": "Joined",
+    "table_col_actions": "Actions",
+    "dropdown_edit": "Edit User",
+    "dropdown_delete": "Delete User",
+    "table_no_users": "No users found. Click \"Add New User\" to get started.",
+    "confirm_delete_title": "Are you sure you want to delete this user?",
+    "confirm_delete_desc": "This action cannot be undone. This will permanently delete the user's account."
+  },
+  "settings": {
+    "tabs": {
+      "profile": "Profile",
+      "locations": "Locations",
+      "vehicles": "Vehicles"
+    },
+    "profile": {
+      "title": "Personal Information",
+      "description": "Update your name and email address.",
+      "email": "Email Address",
+      "save": "Save Changes",
+      "toast_success": "Profile updated successfully!",
+      "toast_error": "Failed to update profile."
+    },
+    "security": {
+      "title": "Security",
+      "description": "Update your account password.",
+      "current": "Current Password",
+      "new": "New Password",
+      "confirm": "Confirm New Password",
+      "update": "Update Password",
+      "toast_success": "Password changed successfully!",
+      "toast_error": "Failed to change password."
+    },
+    "locations": {
+      "facilities": "Facilities",
+      "pickup": "Pickup Locations",
+      "facility_name": "Facility Name",
+      "facility_placeholder": "e.g., Main Recycling Plant",
+      "pickup_name": "Location Name",
+      "pickup_placeholder": "e.g., Downtown Office Warehouse",
+      "address_label": "Full Address",
+      "address_placeholder": "e.g., 123 Industrial Way, City"
+    },
+    "vehicles": {
+      "types": "Vehicle Types",
+      "name_label": "Vehicle Name / Model",
+      "name_placeholder": "e.g., 10-Ton Scania Truck"
+    },
+    "crud": {
+      "error_load": "Failed to load {{title}}.",
+      "delete_success": "{{title}} deleted.",
+      "delete_error": "Failed to delete item.",
+      "description": "Add, edit, or remove {{title}}.",
+      "col_name": "Name",
+      "col_address": "Address",
+      "col_actions": "Actions",
+      "no_items": "No items added yet.",
+      "confirm_delete_title": "Delete {{title}}?",
+      "confirm_delete_desc": "This action cannot be undone. Are you sure you want to permanently delete this item?",
+      "add_new": "Add New",
+      "add_title": "Add New {{title}}",
+      "cancel": "Cancel",
+      "save": "Save",
+      "add_success": "{{title}} added!",
+      "add_error": "Failed to add item.",
+      "edit_title": "Edit {{title}}",
+      "save_changes": "Save Changes",
+      "update_success": "{{title}} updated.",
+      "update_error": "Failed to update item."
+    }
+  },
+  "client_detail": {
+    "back_link": "Back to All Clients",
+    "profile_desc": "Client profile and waste management history.",
+    "contact": "Contact Person:",
+    "email": "Email:",
+    "phone": "Phone:",
+    "address": "Address:",
+    "not_available": "N/A",
+    "entries_title": "Waste Entries",
+    "entries_desc": "Log and track collected waste for this client. Click a row to see details.",
+    "col_pickup": "Pickup Date",
+    "col_type": "Waste Type",
+    "col_quantity": "Total Quantity",
+    "col_progress": "Recycling Progress",
+    "col_actions": "Actions",
+    "progress_text": "{{recycled}} of {{total}} {{unit}}",
+    "status_full": "Fully Recycled",
+    "status_partial": "Partially Recycled",
+    "status_pending": "Pending",
+    "btn_recycled": "Recycled",
+    "btn_process": "Process",
+    "dropdown_details": "View Details",
+    "dropdown_delete": "Delete",
+    "no_entries": "No waste entries found. Click \"Add Waste Entry\" to log a collection.",
+    "confirm_title": "Are you sure?",
+    "confirm_desc": "This action cannot be undone. This will permanently delete this waste entry and all of its recycling history.",
+    "error_fetch": "Failed to fetch client data.",
+    "toast_delete_success": "Waste entry deleted successfully.",
+    "toast_delete_error": "Failed to delete waste entry."
+  },
+    "report_generator": {
+    "steps": {
+      "config": "Configuration",
+      "data": "Data Selection",
+      "insights": "Insights",
+      "generate": "Generate"
+    },
+    "img_upload": "Click to upload",
+    "step1": {
+      "title": "Report Title",
+      "title_placeholder": "e.g., Q3 Sustainability Report",
+      "cover": "Cover Image (Optional)",
+      "logo": "Company Logo (Optional)"
+    },
+    "step2": {
+      "client": "Client",
+      "client_placeholder": "Select a client",
+      "period": "Reporting Period",
+      "period_placeholder": "Pick a date range",
+      "waste_types": "Included Waste Types",
+      "waste_types_desc": "Select which waste types to include in the report.",
+      "waste_types_empty": "Select a client and date range to see available waste types."
+    },
+    "step2_5": {
+      "title": "Include a Writing Section?",
+      "desc": "Adding a writing section allows you to provide custom insights in your report. Here are sample questions you might answer:",
+      "ai_prompt": "Our AI assistance is ready to help you answer these questions efficiently.",
+      "q1": "What are the key highlights of this report?",
+      "q2": "Any recommendations for improvement?",
+      "q3": "Additional comments or notes?",
+      "yes": "Yes, Include",
+      "no": "No, Skip"
+    },
+    "step3": {
+      "toast_generating": "Generating AI insights, this may take a moment...",
+      "toast_success": "AI insights generated successfully!",
+      "toast_error": "Failed to generate AI insights.",
+      "ai_title": "AI Assistance Available",
+      "ai_desc1": "Fill in your answers manually, or let our",
+      "ai_desc2": " AI generate insights ",
+      "ai_desc3": "for you.",
+      "ai_btn": "Generate with AI",
+      "question_label": "Question {{index}}: {{text}}",
+      "question_placeholder": "Provide a detailed answer..."
+    },
+    "step4": {
+      "title": "Ready to Generate",
+      "desc": "All sections are set. Click the button below to generate your report.",
+      "check1": "Make sure all report sections are completed.",
+      "check2": "Review key highlights before generating.",
+      "check3": "Ensure AI insights are included as needed."
+    },
+    "default_title": "Waste Management & Sustainability Report",
+    "toast_load_error": "Failed to load page configuration.",
+    "toast_generate_success": "Report generated successfully!",
+    "toast_generate_error": "Failed to generate report.",
+    "back_link": "Back to Reports",
+    "title": "Generate a New Report",
+    "desc": "Follow the steps to create a comprehensive report.",
+    "btn_cancel": "Cancel Generating Report",
+    "btn_back": "Back",
+    "btn_next_questions": "Next Questions",
+    "btn_next": "Next",
+    "btn_generate": "Generate Report"
   }
 }
 
