--- a/client/public/locales/my/translation.json
+++ b/client/public/locales/my/translation.json
@@ -1,33 +1,33 @@
 {
   "nav": {
     "dashboard": "ဒိုင်ခွက်",
-    "clients": "ဖောက်သည်များ",
+    "clients": "ဟိုဟာ",
     "reports": "အစီရင်ခံစာများ",
     "users": "အသုံးပြုသူစီမံခန့်ခွဲမှု",
     "settings": "ဆက်တင်များ",
-    "tenants": "ငှားရမ်းသူများ"
+    "tenants": "အိမ်ငှား"
   },
   "user_menu": {
-    "my_account": "ကျွန်ုပ်၏အကောင့်",
+    "my_account": "ကြှနျုပျအကောငျ့",
     "settings": "ဆက်တင်များ",
     "support": "အထောက်အပံ့",
     "logout": "ထွက်လိုက်ပါ။"
   },
   "dashboard": {
-    "title": "ဒက်ရှ်ဘုတ်",
+    "title": "ဒိုင်ခွက်",
     "welcome": "ကြိုဆိုပါတယ် {{name}}။ ဒါကတော့ မင်းရဲ့သက်ရောက်မှု ခြုံငုံသုံးသပ်ချက်ပါ။",
     "default_user": "အသုံးပြုသူ",
     "error_fetch": "ဒက်ရှ်ဘုတ်ဒေတာကို ရယူ၍မရပါ။ နောက်မှ ထပ်စမ်းကြည့်ပါ။",
     "timeframe": {
-      "select": "အချိန်ကာလကို ရွေးပါ။",
+      "select": "အချိန်ဘောင်ကို ရွေးပါ။",
       "days_30": "နောက်ဆုံးရက် 30",
       "months_3": "ပြီးခဲ့သည့် 3 လ",
       "months_6": "ပြီးခဲ့သည့် 6 လ",
       "year_1": "မနှစ်က",
-      "all": "အားလုံး",
-      "custom": "စိတ်ကြိုက်ကာလ",
+      "all": "အချိန်တိုင်း",
+      "custom": "စိတ်ကြိုက်အတိုင်းအတာ",
       "start_date": "စတင်သည့်ရက်စွဲ",
-      "end_date": "ကုန်ဆုံးရက်စွဲ"
+      "end_date": "ကုန်ဆုံးရက်"
     },
     "kpis": {
       "clients": "စုစုပေါင်းဖောက်သည်များ",
@@ -40,10 +40,10 @@
       "leaderboard_title": "Client Leaderboard",
       "leaderboard_desc": "ကာလအပိုင်းအခြားအတွင်း ပြန်လည်အသုံးပြုသည့်ပမာဏအားဖြင့် ထိပ်တန်းဖောက်သည်များ။",
       "leaderboard_col_client": "လိုင်းအမည်",
-      "leaderboard_col_reports": "အစီရင်ခံစာများထုတ်ပေ:ခြင်း",
+      "leaderboard_col_reports": "အစီရင်ခံစာများထုတ်ပေးသည်။",
       "leaderboard_col_total": "စုစုပေါင်း (ကီလိုဂရမ်)",
       "composition_title": "ထိပ်တန်းဖောက်သည်များ၏ အမှိုက်ဖွဲ့စည်းမှု",
-      "composition_desc": "သင်၏ အတက်ကြွဆုံး ဖောက်သည်များအတွက် စွန့်ပစ်ပစ္စည်း အမျိုးအစားများ၏ ခွဲခြမ်းစိတ်ဖြာမှု။",
+      "composition_desc": "သင်၏ အတက်ကြွဆုံး ဖောက်သည်များအတွက် စွန့်ပစ်ပစ္စည်း အမျိုးအစားများကို ပိုင်းခြားပါ။",
       "pickup_trend_title": "လစဉ် Pickup Trend",
       "pickup_trend_desc": "လအလိုက် ကောက်ခံသည့် စုစုပေါင်းအလေးချိန် (လာယူမည့်ရက်စွဲဖြင့်)။",
       "pickup_trend_legend": "ကောက်ခံ (ကီလိုဂရမ်)",
@@ -55,10 +55,40 @@
       "facility_title": "Facility ဖြင့် ပြန်လည်အသုံးပြုခြင်း။",
       "facility_desc": "စက်ရုံတစ်ခုစီတွင် စုစုပေါင်းပမာဏ (ကီလိုဂရမ်) စီမံဆောင်ရွက်ထားပါသည်။",
       "facility_legend": "အလေးချိန် (ကီလိုဂရမ်)"
+    },
+    "tabs": {
+      "tenant": "သင့်အိမ်ငှားအချက်အလက်",
+      "global": "ကမ္ဘာလုံးဆိုင်ရာစံနှုန်းများ"
+    },
+    "custom_chart": {
+      "title": "စိတ်ကြိုက်ဇယား",
+      "desc": "သင်ကြည့်ရှုလိုသော ဒေတာနှင့် ဇယားအမျိုးအစားကို ရွေးချယ်ပါ။",
+      "select_data": "Data ကို ရွေးပါ။",
+      "select_type": "ဇယားအမျိုးအစား",
+      "type_line": "လိုင်း",
+      "type_bar": "ဘား",
+      "type_pie": "စက်ဝိုင်း",
+      "type_area": "ဧရိယာ",
+      "no_data": "ဒေတာမရရှိနိုင်ပါ။",
+      "legend_value": "တန်ဖိုး"
+    },
+    "global": {
+      "desc": "သင့်အကျိုးသက်ရောက်မှုသည် ပလက်ဖောင်းတစ်ခုလုံးနှင့် မည်သို့နှိုင်းယှဉ်သည်ကို ကြည့်ပါ။"
+    },
+    "global_charts": {
+      "renewable_title": "ပြန်လည်ပြည့်ဖြိုးမြဲစွမ်းအင် မျှဝေမှု",
+      "renewable_desc": "နေရောင်ခြည်၊ လေ၊ ရေအားလျှပ်စစ်နှင့် ဇီဝလောင်စာများကဲ့သို့ ပြန်လည်ပြည့်ဖြိုးမြဲ အရင်းအမြစ်များမှ ရရှိသည့် ကမ္ဘာလုံးဆိုင်ရာ စွမ်းအင်သုံးစွဲမှု ရာခိုင်နှုန်းကို ပြသသည်။",
+      "renewable_legend": "ပြန်လည်ပြည့်ဖြိုးမြဲစွမ်းအင် (စုစုပေါင်း၏ ရာခိုင်နှုန်း)",
+      "electricity_title": "ကမ္ဘာလုံးဆိုင်ရာ လျှပ်စစ်သုံးစွဲခွင့်",
+      "electricity_desc": "ကမ္ဘာ့လူဦးရေ၏ အချိုးအစားမှာ လျှပ်စစ်မီးရရှိရေးဖြစ်သည်။ ကမ္ဘာလုံးဆိုင်ရာ ဖွံ့ဖြိုးတိုးတက်မှုနှင့် စွမ်းအင်ပါဝင်မှု၏ အဓိကအချက်တစ်ချက်။",
+      "electricity_legend": "လျှပ်စစ်လက်လှမ်းမီမှု (% လူဦးရေ)",
+      "urban_title": "မြို့ပြလူဦးရေတိုး",
+      "urban_desc": "တစ်ကမ္ဘာလုံးရှိ မြို့ပြများတွင် နေထိုင်သူ ရာခိုင်နှုန်းကို ပြသည်။ မြို့ပြဖြစ်လာခြင်းသည် အခြေခံအဆောက်အအုံ၊ ဓာတ်ငွေ့ထုတ်လွှတ်မှုနှင့် ရေရှည်တည်တံ့ခိုင်မြဲရေး ကြိုးပမ်းမှုများကို အကျိုးသက်ရောက်စေသည်။",
+      "urban_legend": "မြို့ပြလူဦးရေ (စုစုပေါင်း၏ ရာခိုင်နှုန်း)"
     }
   },
   "clients": {
-    "title": "ဖောက်သည်များ",
+    "title": "ဟိုဟာ",
     "description": "သင့်ဖောက်သည် ပရိုဖိုင်များနှင့် ၎င်းတို့၏ အမှိုက်ဒေတာကို စီမံခန့်ခွဲပါ။",
     "error_fetch": "ဖောက်သည်များကို ခေါ်ယူ၍မရပါ။ ထပ်စမ်းကြည့်ပါ။",
     "toast_delete_success": "သုံးစွဲသူ \"{{name}}\" ကို အောင်မြင်စွာ ဖျက်လိုက်ပါပြီ။",
@@ -74,14 +104,14 @@
     "dropdown_delete": "Client ကို ဖျက်ပါ။",
     "table_no_clients": "ဖောက်သည်မတွေ့ပါ။ စတင်ရန် \"Add New Client\" ကိုနှိပ်ပါ။",
     "confirm_delete_title": "ဤကလိုင်းယင့်ကို ဖျက်လိုသည်မှာ သေချာပါသလား။",
-    "confirm_delete_desc": "ဤလုပ်ဆောင်ချက်ကို ပြန်ပြင်၍မရပါ။ ဤကလိုင်းယင့်အတွက် စွန့်ပစ်ပစ္စည်းများနှင့် အစီရင်ခံစာများအားလုံးကိုလည်း အပြီးအပိုင် ဖျက်လိုက်ပါမည်။"
+    "confirm_delete_desc": "ဤလုပ်ဆောင်ချက်ကို ပြန်ပြင်၍မရပါ။ ဤကလိုင်းယင့်အတွက် စွန့်ပစ်ပစ္စည်းများနှင့် အစီရင်ခံစာများအားလုံးကိုလည်း အပြီးတိုင်ဖျက်ပစ်ပါမည်။"
   },
   "reports": {
     "title": "အစီရင်ခံစာများ",
     "description": "သင့်ထုတ်လုပ်လိုက်သော ရေရှည်တည်တံ့မှုအစီရင်ခံစာအားလုံးကို ကြည့်ရှုစီမံပါ။",
     "error_fetch": "အစီရင်ခံစာများကို ရယူ၍မရပါ။ ထပ်စမ်းကြည့်ပါ။",
     "toast_pdf_error": "PDF ထုတ်လုပ်ရန် မအောင်မြင်ပါ။",
-    "toast_fetch_error": "ဒေါင်းလုဒ်လုပ်ရန်အတွက် အစီရင်ခံစာဒေတာကို ရယူ၍မရပါ။",
+    "toast_fetch_error": "ဒေါင်းလုဒ်အတွက် အစီရင်ခံစာဒေတာကို ရယူ၍မရပါ။",
     "button_generate": "အစီရင်ခံစာအသစ်ကို ဖန်တီးပါ။",
     "table_col_title": "ခေါင်းစဉ်ကို သတင်းပို့ပါ။",
     "table_col_client": "ဖောက်သည်",
@@ -93,7 +123,7 @@
     "table_no_reports": "အစီရင်ခံစာ မထုတ်ပြန်သေးပါ။",
     "charts": {
       "emissions_label": "ထုတ်လွှတ်မှု (CO2e ကီလိုဂရမ်)",
-      "emissions_avoided": "ရှောင်ရှားခဲ့သည်။",
+      "emissions_avoided": "ရှောင်ကြဉ်ခဲ့သည်။",
       "emissions_logistics": "ထောက်ပံ့ပို့ဆောင်ရေး",
       "emissions_recycling": "ပြန်လည်အသုံးပြုခြင်း။",
       "logistics_emissions": "ထောက်ပံ့ပို့ဆောင်ရေးထုတ်လွှတ်မှု",
@@ -112,7 +142,7 @@
     "table_col_name": "နာမည်",
     "table_col_email": "အီးမေးလ်",
     "table_col_role": "အခန်းကဏ္ဍ",
-    "table_col_joined": "စတင်သည့်ရက်စွဲ",
+    "table_col_joined": "မှီဝဲ",
     "table_col_actions": "လုပ်ဆောင်ချက်များ",
     "dropdown_edit": "အသုံးပြုသူကို တည်းဖြတ်ပါ။",
     "dropdown_delete": "အသုံးပြုသူကို ဖျက်ပါ။",
@@ -132,7 +162,7 @@
       "email": "အီးမေးလ်လိပ်စာ",
       "save": "အပြောင်းအလဲများကို သိမ်းဆည်းပါ။",
       "toast_success": "ပရိုဖိုင်ကို အောင်မြင်စွာ အပ်ဒိတ်လုပ်ထားသည်။",
-      "toast_error": "ပရိုဖိုင်ကို အပ်ဒိတ်လုပ်ရန် မအောင်မြင်ပါ။"
+      "toast_error": "ပရိုဖိုင်ကို အပ်ဒိတ်လုပ်၍မရပါ။"
     },
     "security": {
       "title": "လုံခြုံရေး",
@@ -201,8 +231,8 @@
     "status_full": "အပြည့်အဝ ပြန်လည်အသုံးပြုထားသည်။",
     "status_partial": "တစ်စိတ်တစ်ပိုင်း ပြန်လည်အသုံးပြုထားသည်။",
     "status_pending": "ဆိုင်းငံ့ထားသည်။",
-    "btn_recycled": "Recycle ပြီးခဲ့သည်။",
-    "btn_process": "လုပ်ဆောင်ပါ။",
+    "btn_recycled": "ပြန်လည်အသုံးပြုသည်။",
+    "btn_process": "လုပ်ငန်းစဉ်",
     "dropdown_details": "အသေးစိတ်ကို ကြည့်ပါ။",
     "dropdown_delete": "ဖျက်ပါ။",
     "no_entries": "စွန့်ပစ်ပစ္စည်းများကို မတွေ့ပါ။ စုစည်းမှုမှတ်တမ်းတစ်ခုရယူရန် \"Add Waste Entry\" ကိုနှိပ်ပါ။",
@@ -236,7 +266,7 @@
       "waste_types_empty": "ရနိုင်သောအမှိုက်အမျိုးအစားများကိုကြည့်ရန် ကလိုင်းယင့်နှင့် ရက်အပိုင်းအခြားကို ရွေးပါ။"
     },
     "step2_5": {
-      "title": "စာရေးတဲ့အပိုင်းကို ထည့်မလား။",
+      "title": "စာရေးခြင်းအပိုင်းကို ထည့်သွင်းလိုပါသလား။",
       "desc": "အရေးအသားကဏ္ဍကို ထည့်သွင်းခြင်းဖြင့် သင့်အစီရင်ခံစာတွင် စိတ်ကြိုက်ထိုးထွင်းသိမြင်မှုများကို ပေးစွမ်းနိုင်မည်ဖြစ်သည်။ ဤသည်မှာ သင်ဖြေနိုင်သော နမူနာမေးခွန်းများဖြစ်သည်-",
       "ai_prompt": "ကျွန်ုပ်တို့၏ AI အကူအညီသည် ဤမေးခွန်းများကို ထိရောက်စွာဖြေဆိုနိုင်ရန် အဆင်သင့်ဖြစ်နေပါပြီ။",
       "q1": "ဤအစီရင်ခံစာ၏ အဓိကအချက်များကား အဘယ်နည်း။",
@@ -272,7 +302,7 @@
     "title": "အစီရင်ခံစာအသစ်တစ်ခု ဖန်တီးပါ။",
     "desc": "ပြီးပြည့်စုံသော အစီရင်ခံစာတစ်ခု ဖန်တီးရန် အဆင့်များကို လိုက်နာပါ။",
     "btn_cancel": "အစီရင်ခံစာထုတ်ခြင်းကို ပယ်ဖျက်ပါ။",
-    "btn_back": "နောက်သို့",
+    "btn_back": "ကျော",
     "btn_next_questions": "နောက်မေးခွန်းများ",
     "btn_next": "နောက်တစ်ခု",
     "btn_generate": "အစီရင်ခံစာထုတ်ပါ။"
