--- a/client/public/locales/th/translation.json
+++ b/client/public/locales/th/translation.json
@@ -55,6 +55,36 @@
       "facility_title": "การรีไซเคิลตามโรงงาน",
       "facility_desc": "ปริมาตรรวมที่แปรรูปในแต่ละโรงงาน (กก.)",
       "facility_legend": "น้ำหนัก (กก.)"
+    },
+    "tabs": {
+      "tenant": "ข้อมูลผู้เช่าของคุณ",
+      "global": "เกณฑ์มาตรฐานระดับโลก"
+    },
+    "custom_chart": {
+      "title": "แผนภูมิที่กำหนดเอง",
+      "desc": "เลือกข้อมูลและประเภทแผนภูมิที่คุณต้องการดู",
+      "select_data": "เลือกข้อมูล",
+      "select_type": "ประเภทแผนภูมิ",
+      "type_line": "เส้น",
+      "type_bar": "บาร์",
+      "type_pie": "พาย",
+      "type_area": "พื้นที่",
+      "no_data": "ไม่มีข้อมูล",
+      "legend_value": "ค่า"
+    },
+    "global": {
+      "desc": "ดูว่าผลกระทบของคุณเปรียบเทียบกับแพลตฟอร์มทั้งหมดได้อย่างไร"
+    },
+    "global_charts": {
+      "renewable_title": "การแบ่งปันพลังงานหมุนเวียน",
+      "renewable_desc": "แสดงเปอร์เซ็นต์การบริโภคพลังงานทั่วโลกที่ได้มาจากแหล่งพลังงานหมุนเวียน เช่น พลังงานแสงอาทิตย์ พลังงานลม พลังงานน้ำ และพลังงานชีวมวล",
+      "renewable_legend": "พลังงานหมุนเวียน (% ของทั้งหมด)",
+      "electricity_title": "การเข้าถึงไฟฟ้าทั่วโลก",
+      "electricity_desc": "สัดส่วนของประชากรโลกที่สามารถเข้าถึงไฟฟ้าได้ ตัวชี้วัดสำคัญของการพัฒนาระดับโลกและการเข้าถึงพลังงาน",
+      "electricity_legend": "การเข้าถึงไฟฟ้า (% ประชากร)",
+      "urban_title": "การเติบโตของประชากรในเมือง",
+      "urban_desc": "แสดงเปอร์เซ็นต์ของประชากรที่อาศัยอยู่ในเขตเมืองทั่วโลก การขยายตัวของเมืองส่งผลกระทบต่อโครงสร้างพื้นฐาน การปล่อยมลพิษ และความพยายามในการพัฒนาอย่างยั่งยืน",
+      "urban_legend": "ประชากรในเขตเมือง (% ของทั้งหมด)"
     }
   },
   "clients": {
@@ -262,7 +292,7 @@
       "desc": "ทุกส่วนได้รับการตั้งค่าแล้ว คลิกปุ่มด้านล่างเพื่อสร้างรายงานของคุณ",
       "check1": "ตรวจสอบให้แน่ใจว่าส่วนต่างๆ ของรายงานเสร็จสมบูรณ์",
       "check2": "ตรวจสอบไฮไลท์สำคัญก่อนที่จะสร้าง",
-      "check3": "ให้แน่ใจว่ามีการรวมข้อมูลเชิงลึกของ AI ตามความจำเป็น"
+      "check3": "ตรวจสอบให้แน่ใจว่ามีการรวมข้อมูลเชิงลึกของ AI ตามความจำเป็น"
     },
     "default_title": "รายงานการจัดการขยะและความยั่งยืน",
     "toast_load_error": "ไม่สามารถโหลดการกำหนดค่าหน้าได้",
