--- a/client/public/locales/es/translation.json
+++ b/client/public/locales/es/translation.json
@@ -15,16 +15,16 @@
   },
   "dashboard": {
     "title": "Panel",
-    "welcome": "¡Bienvenido de nuevo, {{name}}! Aquí tienes un resumen de tu impacto.",
+    "welcome": "¡Bienvenido/a de nuevo, {{name}}! Aquí tienes un resumen de tu impacto.",
     "default_user": "Usuario",
-    "error_fetch": "No se pudieron obtener los datos del panel. Inténtelo de nuevo más tarde.",
+    "error_fetch": "No se pudieron obtener los datos del panel de control. Inténtelo de nuevo más tarde.",
     "timeframe": {
       "select": "Seleccionar período de tiempo",
       "days_30": "Últimos 30 días",
       "months_3": "Últimos 3 meses",
       "months_6": "Últimos 6 meses",
       "year_1": "El año pasado",
-      "all": "Todo el tiempo",
+      "all": "De todos los tiempos",
       "custom": "Gama personalizada",
       "start_date": "Fecha de inicio",
       "end_date": "Fecha de finalización"
@@ -37,17 +37,17 @@
       "emissions": "Emisiones evitadas (kg CO2e)"
     },
     "charts": {
-      "leaderboard_title": "Tabla de clasificación de clientes",
-      "leaderboard_desc": "Principales clientes por volumen reciclado en el periodo.",
+      "leaderboard_title": "Clasificación de clientes",
+      "leaderboard_desc": "Principales clientes por volumen reciclado en el período.",
       "leaderboard_col_client": "Nombre del cliente",
       "leaderboard_col_reports": "Informes generados",
       "leaderboard_col_total": "Total (kg)",
-      "composition_title": "Composición de residuos por clientes principales",
-      "composition_desc": "Desglose de los tipos de residuos para sus clientes más activos.",
-      "pickup_trend_title": "Tendencia de recogida mensual",
-      "pickup_trend_desc": "Peso total recolectado mes a mes (por fecha de recolección).",
-      "pickup_trend_legend": "Recogidos (kg)",
-      "emissions_title": "Emisiones evitadas por material",
+      "composition_title": "Composición de residuos por parte de los principales clientes",
+      "composition_desc": "Desglose de los tipos de residuos de sus clientes más activos.",
+      "pickup_trend_title": "Tendencia mensual de recogida",
+      "pickup_trend_desc": "Peso total recogido mes a mes (por fecha de recogida).",
+      "pickup_trend_legend": "Recolectado (kg)",
+      "emissions_title": "Emisiones evitadas por el material",
       "emissions_desc": "Impacto ambiental según el tipo de material (kg CO2e).",
       "emissions_legend": "Emisiones (kg CO2e)",
       "category_title": "Residuos por categoría",
@@ -55,13 +55,43 @@
       "facility_title": "Reciclaje por instalación",
       "facility_desc": "Volumen total procesado en cada instalación (kg).",
       "facility_legend": "Peso (kg)"
+    },
+    "tabs": {
+      "tenant": "Información sobre su inquilino",
+      "global": "Puntos de referencia globales"
+    },
+    "custom_chart": {
+      "title": "Gráfico personalizado",
+      "desc": "Seleccione el tipo de datos y gráfico que desea ver.",
+      "select_data": "Seleccionar datos",
+      "select_type": "Tipo de gráfico",
+      "type_line": "Línea",
+      "type_bar": "Bar",
+      "type_pie": "Pastel",
+      "type_area": "Área",
+      "no_data": "No hay datos disponibles.",
+      "legend_value": "Valor"
+    },
+    "global": {
+      "desc": "Comprueba cómo se compara tu impacto con el de toda la plataforma."
+    },
+    "global_charts": {
+      "renewable_title": "Participación en la energía renovable",
+      "renewable_desc": "Muestra el porcentaje del consumo energético mundial procedente de fuentes renovables como la solar, la eólica, la hidroeléctrica y la biomasa.",
+      "renewable_legend": "Energía renovable (% del total)",
+      "electricity_title": "Acceso mundial a la electricidad",
+      "electricity_desc": "Porcentaje de la población mundial con acceso a la electricidad. Un indicador clave del desarrollo global y la inclusión energética.",
+      "electricity_legend": "Acceso a la electricidad (% de la población)",
+      "urban_title": "Crecimiento de la población urbana",
+      "urban_desc": "Muestra el porcentaje de personas que viven en zonas urbanas a nivel mundial. La urbanización afecta a la infraestructura, las emisiones y los esfuerzos de sostenibilidad.",
+      "urban_legend": "Población urbana (% del total)"
     }
   },
   "clients": {
     "title": "Clientela",
-    "description": "Gestiona tus perfiles de clientes y sus datos de residuos.",
+    "description": "Gestiona los perfiles de tus clientes y sus datos de residuos.",
     "error_fetch": "No se pudieron obtener los clientes. Inténtelo de nuevo.",
-    "toast_delete_success": "El cliente \"{{name}}\" se eliminó correctamente.",
+    "toast_delete_success": "Cliente \"{{name}}\" eliminado correctamente.",
     "toast_delete_error": "No se pudo eliminar el cliente.",
     "table_col_company": "nombre de empresa",
     "table_col_contact": "Persona de contacto",
@@ -72,16 +102,16 @@
     "dropdown_waste": "Datos sobre residuos",
     "dropdown_edit": "Editar cliente",
     "dropdown_delete": "Eliminar cliente",
-    "table_no_clients": "No se encontraron clientes. Haz clic en \"Añadir nuevo cliente\" para empezar.",
-    "confirm_delete_title": "¿Está seguro de que desea eliminar este cliente?",
-    "confirm_delete_desc": "Esta acción no se puede deshacer. Todos los datos e informes de residuos de este cliente se eliminarán permanentemente."
+    "table_no_clients": "No se encontraron clientes. Haga clic en \"Agregar nuevo cliente\" para comenzar.",
+    "confirm_delete_title": "¿Estás seguro de que quieres eliminar este cliente?",
+    "confirm_delete_desc": "Esta acción es irreversible. Todos los datos e informes de residuos de este cliente también se eliminarán permanentemente."
   },
   "reports": {
     "title": "Informes",
-    "description": "Vea y administre todos sus informes de sostenibilidad generados.",
+    "description": "Visualiza y gestiona todos tus informes de sostenibilidad generados.",
     "error_fetch": "No se pudieron obtener los informes. Inténtelo de nuevo.",
-    "toast_pdf_error": "Error al generar el PDF.",
-    "toast_fetch_error": "No se pudieron obtener los datos del informe para descargar.",
+    "toast_pdf_error": "No se pudo generar el PDF.",
+    "toast_fetch_error": "No se pudieron obtener los datos del informe para su descarga.",
     "button_generate": "Generar nuevo informe",
     "table_col_title": "Título del informe",
     "table_col_client": "Cliente",
@@ -99,16 +129,16 @@
       "logistics_emissions": "Emisiones logísticas",
       "recycling_emissions": "Emisiones del reciclaje",
       "quantity_kg": "Cantidad (kg)",
-      "collected_kg": "Recogidos (kg)",
+      "collected_kg": "Recolectado (kg)",
       "weight_kg": "Peso (kg)"
     }
   },
   "users": {
     "title": "Gestión de usuarios",
     "description": "Agregue, edite o elimine usuarios para su inquilino.",
-    "error_fetch": "No se pudo obtener los usuarios.",
-    "toast_delete_success": "Usuario eliminado exitosamente",
-    "toast_delete_error": "No se pudo eliminar el usuario.",
+    "error_fetch": "No se pudieron recuperar los usuarios.",
+    "toast_delete_success": "Usuario eliminado correctamente.",
+    "toast_delete_error": "No se pudo eliminar al usuario.",
     "table_col_name": "Nombre",
     "table_col_email": "Correo electrónico",
     "table_col_role": "Role",
@@ -116,9 +146,9 @@
     "table_col_actions": "Comportamiento",
     "dropdown_edit": "Editar usuario",
     "dropdown_delete": "Eliminar usuario",
-    "table_no_users": "No se encontraron usuarios. Haz clic en \"Añadir nuevo usuario\" para empezar.",
-    "confirm_delete_title": "¿Estás seguro que deseas eliminar este usuario?",
-    "confirm_delete_desc": "Esta acción no se puede deshacer. Eliminará permanentemente la cuenta del usuario."
+    "table_no_users": "No se encontraron usuarios. Haz clic en \"Agregar nuevo usuario\" para comenzar.",
+    "confirm_delete_title": "¿Estás seguro de que quieres eliminar este usuario?",
+    "confirm_delete_desc": "Esta acción es irreversible. Esto eliminará permanentemente la cuenta del usuario."
   },
   "settings": {
     "tabs": {
@@ -128,36 +158,36 @@
     },
     "profile": {
       "title": "Información personal",
-      "description": "Actualice su nombre y dirección de correo electrónico.",
+      "description": "Actualiza tu nombre y dirección de correo electrónico.",
       "email": "Dirección de correo electrónico",
       "save": "Guardar cambios",
       "toast_success": "¡Perfil actualizado exitosamente!",
-      "toast_error": "Error al actualizar el perfil."
+      "toast_error": "No se pudo actualizar el perfil."
     },
     "security": {
       "title": "Seguridad",
-      "description": "Actualice la contraseña de su cuenta.",
+      "description": "Actualiza la contraseña de tu cuenta.",
       "current": "Contraseña actual",
       "new": "Nueva contraseña",
       "confirm": "Confirmar nueva contraseña",
       "update": "Actualizar contraseña",
-      "toast_success": "¡Contraseña cambiada exitosamente!",
-      "toast_error": "Error al cambiar la contraseña."
+      "toast_success": "¡Contraseña cambiada correctamente!",
+      "toast_error": "No se pudo cambiar la contraseña."
     },
     "locations": {
       "facilities": "Instalaciones",
       "pickup": "Lugares de recogida",
       "facility_name": "Nombre de la instalación",
-      "facility_placeholder": "p. ej., Planta de Reciclaje Principal",
+      "facility_placeholder": "Por ejemplo, la planta principal de reciclaje",
       "pickup_name": "Nombre de la ubicación",
-      "pickup_placeholder": "p. ej., almacén de oficinas del centro",
+      "pickup_placeholder": "Por ejemplo, almacén de oficinas del centro",
       "address_label": "Dirección completa",
-      "address_placeholder": "p. ej., 123 Industrial Way, Ciudad"
+      "address_placeholder": "Por ejemplo, 123 Industrial Way, Ciudad"
     },
     "vehicles": {
       "types": "Tipos de vehículos",
-      "name_label": "Nombre/modelo del vehículo",
-      "name_placeholder": "p. ej., camión Scania de 10 toneladas"
+      "name_label": "Nombre/Modelo del vehículo",
+      "name_placeholder": "Por ejemplo, un camión Scania de 10 toneladas."
     },
     "crud": {
       "error_load": "No se pudo cargar {{title}}.",
@@ -167,19 +197,19 @@
       "col_name": "Nombre",
       "col_address": "DIRECCIÓN",
       "col_actions": "Comportamiento",
-      "no_items": "No hay artículos añadidos todavía",
-      "confirm_delete_title": "¿Borrar {{title}}?",
-      "confirm_delete_desc": "Esta acción no se puede deshacer. ¿Estás seguro de que deseas eliminar este elemento permanentemente?",
+      "no_items": "Aún no se han añadido artículos.",
+      "confirm_delete_title": "¿Eliminar {{title}}?",
+      "confirm_delete_desc": "Esta acción es irreversible. ¿Seguro que quieres eliminar este elemento de forma permanente?",
       "add_new": "Agregar nuevo",
       "add_title": "Agregar nuevo {{title}}",
       "cancel": "Cancelar",
       "save": "Ahorrar",
-      "add_success": "¡{{title}} añadido!",
-      "add_error": "No se pudo agregar el artículo.",
+      "add_success": "{{title}} añadido!",
+      "add_error": "No se pudo agregar el elemento.",
       "edit_title": "Editar {{title}}",
       "save_changes": "Guardar cambios",
       "update_success": "{{title}} actualizado.",
-      "update_error": "Error al actualizar el artículo."
+      "update_error": "No se pudo actualizar el elemento."
     }
   },
   "client_detail": {
@@ -191,7 +221,7 @@
     "address": "DIRECCIÓN:",
     "not_available": "N / A",
     "entries_title": "Entradas de residuos",
-    "entries_desc": "Registra y rastrea los residuos recolectados para este cliente. Haz clic en una fila para ver los detalles.",
+    "entries_desc": "Registre y haga seguimiento de los residuos recolectados para este cliente. Haga clic en una fila para ver los detalles.",
     "col_pickup": "Fecha de recogida",
     "col_type": "Tipo de residuo",
     "col_quantity": "Cantidad total",
@@ -205,10 +235,10 @@
     "btn_process": "Proceso",
     "dropdown_details": "Ver detalles",
     "dropdown_delete": "Borrar",
-    "no_entries": "No se encontraron residuos. Haga clic en \"Añadir residuo\" para registrar una recogida.",
+    "no_entries": "No se han encontrado registros de residuos. Haga clic en \"Añadir registro de residuos\" para registrar una recogida.",
     "confirm_title": "¿Está seguro?",
-    "confirm_desc": "Esta acción no se puede deshacer. Eliminará permanentemente esta entrada de residuos y todo su historial de reciclaje.",
-    "error_fetch": "No se pudieron obtener los datos del cliente.",
+    "confirm_desc": "Esta acción es irreversible. Se eliminará permanentemente este registro de residuos y todo su historial de reciclaje.",
+    "error_fetch": "No se pudieron recuperar los datos del cliente.",
     "toast_delete_success": "Entrada de residuos eliminada correctamente.",
     "toast_delete_error": "No se pudo eliminar la entrada de residuos."
   },
@@ -219,7 +249,7 @@
       "insights": "Perspectivas",
       "generate": "Generar"
     },
-    "img_upload": "Haga clic para cargar",
+    "img_upload": "Haz clic para subir",
     "step1": {
       "title": "Título del informe",
       "title_placeholder": "por ejemplo, informe de sostenibilidad del tercer trimestre",
@@ -237,20 +267,20 @@
     },
     "step2_5": {
       "title": "¿Incluir una sección de escritura?",
-      "desc": "Añadir una sección de redacción le permite proporcionar información personalizada en su informe. Aquí tiene ejemplos de preguntas que podría responder:",
-      "ai_prompt": "Nuestra asistencia de IA está lista para ayudarle a responder estas preguntas de manera eficiente.",
-      "q1": "¿Cuáles son los puntos más destacados de este informe?",
+      "desc": "Agregar una sección de redacción le permite brindar información personalizada en su informe. Aquí tiene algunos ejemplos de preguntas que podría responder:",
+      "ai_prompt": "Nuestro sistema de asistencia por IA está listo para ayudarle a responder estas preguntas de manera eficiente.",
+      "q1": "¿Cuáles son los aspectos más destacados de este informe?",
       "q2": "¿Alguna recomendación para mejorar?",
-      "q3": "¿Comentarios o notas adicionales?",
+      "q3": "¿Algún comentario o nota adicional?",
       "yes": "Sí, incluir",
-      "no": "No, salta"
+      "no": "No, omitir"
     },
     "step3": {
-      "toast_generating": "Generando información de IA, esto puede tomar un momento...",
-      "toast_success": "¡Perspectivas de IA generadas con éxito!",
-      "toast_error": "No se pudo generar información de IA.",
+      "toast_generating": "Generando información mediante IA, esto puede tardar un momento...",
+      "toast_success": "¡Información obtenida mediante IA con éxito!",
+      "toast_error": "No se lograron generar perspectivas de IA.",
       "ai_title": "Asistencia de IA disponible",
-      "ai_desc1": "Complete sus respuestas manualmente o deje que nuestro",
+      "ai_desc1": "Rellene sus respuestas manualmente o deje que nuestro sistema le ayude.",
       "ai_desc2": "La IA genera información",
       "ai_desc3": "para ti.",
       "ai_btn": "Generar con IA",
@@ -259,19 +289,19 @@
     },
     "step4": {
       "title": "Listo para generar",
-      "desc": "Todas las secciones están configuradas. Haga clic en el botón de abajo para generar su informe.",
+      "desc": "Todas las secciones están configuradas. Haga clic en el botón a continuación para generar su informe.",
       "check1": "Asegúrese de que todas las secciones del informe estén completas.",
-      "check2": "Revise los aspectos más destacados antes de generarlos.",
-      "check3": "Asegúrese de que se incluyan conocimientos de IA según sea necesario."
+      "check2": "Revise los aspectos más destacados antes de generar.",
+      "check3": "Asegúrese de que se incluyan los análisis de IA según sea necesario."
     },
-    "default_title": "Informe de gestión de residuos y sostenibilidad",
-    "toast_load_error": "Error al cargar la configuración de la página.",
-    "toast_generate_success": "¡Informe generado exitosamente!",
+    "default_title": "Informe sobre gestión de residuos y sostenibilidad",
+    "toast_load_error": "No se pudo cargar la configuración de la página.",
+    "toast_generate_success": "¡Informe generado correctamente!",
     "toast_generate_error": "No se pudo generar el informe.",
-    "back_link": "Volver a Informes",
+    "back_link": "Volver a los informes",
     "title": "Generar un nuevo informe",
     "desc": "Siga los pasos para crear un informe completo.",
-    "btn_cancel": "Cancelar la generación de informe",
+    "btn_cancel": "Cancelar la generación del informe",
     "btn_back": "Atrás",
     "btn_next_questions": "Próximas preguntas",
     "btn_next": "Próximo",
